--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -881,6 +881,121 @@
   min-width: 9.1538em;
 }
 
+.service-content {
+  background-color: #4b68dd;
+  padding: 6.25em 0 0;
+}
+
+.service-item {
+  background-color: rgba(3, 6, 17, 0.3);
+  padding: 3.125em 3.8125em;
+  margin: 0 0 1.5625em;
+  position: relative;
+  border-radius: 4px;
+  text-align: center;
+  display: block;
+}
+
+.service-item .service-icon {
+  color: #f4ef4c;
+  margin-bottom: 1.875em;
+}
+
+.service-item .service-icon .icon {
+  font-size: 95px;
+}
+
+.service-item .service-item-text {
+  -webkit-transition: all 1s ease-in-out 0s;
+  transition: all 1s ease-in-out 0s;
+  opacity: 1;
+}
+
+.service-item .service-item-text h2 {
+  margin: 0 0 1.3225em;
+  font-weight: 300;
+  color: #f7f8fd;
+}
+
+.service-item .service-item-text p {
+  font-family: Lora, "Times New Roman", Times, serif;
+  font-size: 1.25em;
+  line-height: 1.55;
+  font-weight: normal;
+  color: #f7f8fd;
+}
+
+.service-item:hover {
+  text-decoration: none;
+}
+
+.service-item .service-item-points {
+  background-color: rgba(3, 6, 17, 0.85);
+  -webkit-transition: all 1s ease-in-out 0s;
+  transition: all 1s ease-in-out 0s;
+  border-radius: 4px;
+  position: absolute;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  left: 0;
+  top: 0;
+}
+
+.service-item .service-item-points ul {
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  position: relative;
+  top: 50%;
+}
+
+.service-item .service-item-points ul li {
+  color: #f4ef4c;
+  font-size: 1.5625em;
+  line-height: 1.24;
+  font-weight: normal;
+  margin-bottom: 0.76em;
+  display: block;
+  opacity: 0;
+}
+
+.service-item:hover .service-item-text {
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+  opacity: 0;
+}
+
+.service-item:hover .service-item-points {
+  opacity: 1;
+}
+
+.service-item:hover .service-item-points ul li {
+  -webkit-transition: all 1s ease-in-out 0s;
+  transition: all 1s ease-in-out 0s;
+  opacity: 1;
+}
+
+.service-item:hover .service-item-points ul li:nth-of-type(1) {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+
+.service-item:hover .service-item-points ul li:nth-of-type(2) {
+  -webkit-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+}
+
+.service-item:hover .service-item-points ul li:nth-of-type(3) {
+  -webkit-transition-delay: 0.9s;
+  transition-delay: 0.9s;
+}
+
+.service-item:hover .service-item-points ul li:nth-of-type(4) {
+  -webkit-transition-delay: 1.2s;
+  transition-delay: 1.2s;
+}
+
 img {
   max-width: 100%;
   height: auto;
