--- a/markup/scss/pages/services.scss
+++ b/markup/scss/pages/services.scss
@@ -1,6 +1,25 @@
+.service-intro{
+	padding: 6.25em 0 6.25em;
+	h1{
+		text-transform: uppercase;
+		margin: 0 0 0.8205em;
+	}
+}
 .service-content{
 	background-color: $brand-primary;
-	padding: 6.25em 0 0;
+	padding: 1.5625em 0;
+	.clients-list{
+		h2{
+			margin: 0 0 1.3225em;
+			font-weight: 300;
+			color: $white;
+		}
+		.clients-logo{
+			li{
+				border-color: lighten($brand-primary, 5%);
+			}
+		}
+	}
 }
 .service-item{
 	background-color: transparentize($black, 0.7);
@@ -93,6 +112,123 @@
 						        transition-delay: 1.2s;
 					}
 				}
+			}
+		}
+	}
+}
+.service-header{
+	white-space: nowrap;
+	position: relative;
+	text-align: center;
+	overflow: hidden;
+	color: $white;
+	&:after{
+		vertical-align: middle;
+		display: inline-block;
+		min-height: 35.5em;
+		content: "";
+	}
+	>*{
+		vertical-align: middle;
+		display: inline-block;
+		white-space: normal;
+	}
+	.container{
+		position: relative;
+		z-index: 1;
+	}
+	.service-header-content{
+		max-width: 454.747px;
+		padding: 1.5625em;
+		position: relative;
+		text-align: left;
+		&:before{
+			background: transparentize($black,0.8);
+			border-radius: 4px;
+			position: absolute;
+			height: 100%;
+			content: "";
+			width: 100%;
+			z-index: -1;
+			right: 0;
+			top: 0;
+		}
+	}
+	h1{
+		font-weight: 400;
+		margin: 0 0 1em;
+		color: $white;
+	}
+	.service-header-excerpt{
+		max-width: 363px;
+	}
+	.service-header-img-bg{
+		background-position: center center;
+		background-size: cover;
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		left: 0;
+		top: 0;
+	}
+}
+.general-info{
+	padding: 6.25em 0 0;
+	.list{
+		counter-reset: list-marker;
+		li{
+			margin: 0 0 1.5625em;
+			&:before{
+				background: lighten($brand-primary, 18%);
+				counter-increment: list-marker;
+				content: counter(list-marker);
+				margin: 0 1.5625em 0 0;
+				border-radius: 50%;
+				text-align: center;
+				line-height: 30px;
+				font-weight: 700;
+				color: $white;
+				height: 30px;
+				width: 30px;
+				float: left;
+			}
+			p{
+				color: darken($brand-primary, 36%);
+				overflow: hidden;
+				font-weight: 600;
+			}
+		}
+	}
+}
+.techologies-block{
+	padding: 6.25em 0 0;
+	h2{
+		color: darken($brand-primary, 36%);
+		margin: 0 0 1.806em;
+	}
+}
+.technologies{
+	background: #fff;
+	ul{
+		@extend %clearfix;
+		text-align: center;
+		li{
+			white-space: nowrap;
+			min-height: 200px;
+			width: 33.33%;
+			float: left;
+			&:after{
+				vertical-align: middle;
+				display: inline-block;
+				height: 200px;
+				width: 1px;
+				content: "";
+			}
+			img{
+				vertical-align: middle;
+				display: inline-block;
+				white-space: normal;
+				max-width: 100px;
 			}
 		}
 	}
