Blog page started

--- a/markup/scss/main.scss
+++ b/markup/scss/main.scss
@@ -21,6 +21,7 @@ $breakpoints: (
 @import 'pages/about';
 @import 'pages/contact';
 @import 'pages/services';
+@import 'pages/blog';
 
 img{
    max-width: 100%;
