--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -82,7 +82,7 @@
   list-style: none;
 }
 
-.clearfix:after, .social-network ul:after, .clients-list .clients-logo:after, .technologies ul:after {
+.clearfix:after, .social-network ul:after, .clients-list .clients-logo:after, .technologies ul:after, .post:after {
   content: '';
   display: block;
   clear: both;
@@ -1273,6 +1273,43 @@
   border-radius: 50px;
   letter-spacing: 1;
   border-width: 2px;
+}
+
+.featured-post .post {
+  margin: 0 0 1.5625em;
+}
+
+.featured-post .featured-image {
+  margin: 0 0 0.625em;
+}
+
+.featured-post .entry-content .entry-title {
+  font-size: 1em;
+  line-height: 1.25;
+  font-weight: 700;
+  text-transform: capitalize;
+  margin: 0 0 1.0625em;
+}
+
+.featured-post .entry-content .category {
+  font-size: 0.8125em;
+  line-height: 1;
+  font-weight: 600;
+  text-transform: uppercase;
+  position: relative;
+  display: block;
+  float: right;
+}
+
+.featured-post .entry-content .category:before {
+  background-color: #e14111;
+  position: absolute;
+  margin-right: 6px;
+  content: "";
+  height: 2px;
+  width: 25px;
+  right: 100%;
+  top: 6px;
 }
 
 img {
