--- a/markup/css/main.css
+++ b/markup/css/main.css
@@ -1275,12 +1275,143 @@
   border-width: 2px;
 }
 
+.section-hero {
+  padding: 6.25em 0;
+}
+
+.hero-content h1 {
+  font-size: 3.8125em;
+  line-height: 1;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin: 0 0 0.278688em;
+}
+
+.hero-content p {
+  font-family: Lora, "Times New Roman", Times, serif;
+  font-size: 1.25em;
+  line-height: 1.55;
+  font-weight: normal;
+}
+
+.post {
+  border-bottom: 1px dotted #e14111;
+  padding: 6.25em 0;
+}
+
+.featured-post .post {
+  border-bottom: none;
+  padding: 0;
+}
+
+.post:last-child {
+  border-bottom: none;
+}
+
+.post .entry-thumbnail {
+  margin: 0 0 1.5625em;
+  display: block;
+}
+
+.post .entry-thumbnail:hover img {
+  opacity: .8;
+}
+
+.post .entry-thumbnail img {
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  display: block;
+  height: auto;
+  width: 100%;
+}
+
+.post .entry-title {
+  text-transform: capitalize;
+  margin: 0 0 0.806em;
+  line-height: 1.612;
+}
+
+.post .entry-title a {
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  color: #030611;
+}
+
+.post .entry-title a:hover {
+  color: #7481b4;
+  text-decoration: none;
+}
+
+.post .entry-meta {
+  font-size: 0.8125em;
+  line-height: 1.538;
+  font-weight: normal;
+  margin-bottom: 1.923em;
+}
+
+.post .entry-meta .entry-author {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  margin: 0 1.5625em 0 0;
+  color: #030611;
+}
+
+.post .entry-meta .entry-author:hover {
+  color: #7481b4;
+  text-decoration: none;
+}
+
+.post .entry-meta .avatar {
+  margin: 0 0.8125em 0 0;
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+}
+
+.post .entry-meta .entry-date {
+  display: inline-block;
+  margin: 0 10px 0 0;
+}
+
+.post .entry-meta .entry-date:after {
+  color: #e14111;
+  margin-left: 10px;
+  content: "|";
+}
+
+.post .entry-excerpt .more {
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  display: inline-block;
+  vertical-align: top;
+  text-transform: capitalize;
+  margin: 2.3125em 0 0;
+  font-weight: 700;
+  color: #030611;
+}
+
+.post .entry-excerpt .more:hover {
+  color: #7481b4;
+  text-decoration: none;
+}
+
+.featured-post {
+  padding: 6.25em 0 4.6875em;
+  background-color: #030611;
+}
+
 .featured-post .post {
   margin: 0 0 1.5625em;
 }
 
 .featured-post .featured-image {
   margin: 0 0 0.625em;
+}
+
+.featured-post .entry-content {
+  color: #f7f8fd;
 }
 
 .featured-post .entry-content .entry-title {
@@ -1291,7 +1422,18 @@
   margin: 0 0 1.0625em;
 }
 
-.featured-post .entry-content .category {
+.featured-post .entry-content .entry-title a {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  color: #f7f8fd;
+}
+
+.featured-post .entry-content .entry-title a:hover {
+  text-decoration: none;
+  opacity: 0.6;
+}
+
+.featured-post .entry-content .category-link {
   font-size: 0.8125em;
   line-height: 1;
   font-weight: 600;
@@ -1301,8 +1443,8 @@
   float: right;
 }
 
-.featured-post .entry-content .category:before {
-  background-color: #e14111;
+.featured-post .entry-content .category-link:before {
+  background-color: #e7e21b;
   position: absolute;
   margin-right: 6px;
   content: "";
@@ -1310,6 +1452,17 @@
   width: 25px;
   right: 100%;
   top: 6px;
+}
+
+.featured-post .entry-content .category-link a {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  color: #f7f8fd;
+}
+
+.featured-post .entry-content .category-link a:hover {
+  text-decoration: none;
+  opacity: 0.6;
 }
 
 img {
